--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -1,16 +1,10 @@
-%% This is an example first chapter.  You should put chapter/appendix that you
-%% write into a separate file, and add a line \include{yourfilename} to
-%% main.tex, where `yourfilename.tex' is the name of the chapter/appendix file.
-%% You can process specific files by typing their names in at the 
-%% \files=
-%% prompt when you run the file main.tex through LaTeX.
 \chapter{Introduction}\label{ch1:intro}
 The pursuit of energy has shaped the history of mankind from its very beginning. And while the image of ancient humans huddled around fires for warmth, protection, and meal preparation is an archetype of our ancestral past, modern human needs remain much the same. Lighting to extend day into night, heating and cooling for residential comfort, cooking of the food we eat, access to the advanced technologies of our time --- these all require energy from one source or another. Choices abound, from animal and plant-based fuels, to buried hydrocarbon resources, to alternatives like solar, wind, hydro, nuclear, and geothermal. The balance and utilization of these resources can shape societal growth on the geopolitical stage and influence the very future of the habitable Earth.
 
 This thesis examines risk-mitigation strategies to help advance the role of one source, geothermal, in addressing ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal as part of a commercial energy portfolio in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
 
 \section{Energy Trends}\label{ch1:trends}
-The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S.\ energy generation and consumption in the \acrlong{aeo} (\acrshort{aeo}) report. Based on the 2020 reference case, the AEO model predicts a 70\% increase in U.S.\ energy usage by 2050, driven primarily by the industrial and power sectors \citep{eia_annual_2021}. Electricity generation also grows by a third, driven primarily by renewables and natural gas as coal, nuclear, and oil experience reductions (Figure \ref{fig:eia_2021_projections}). These predictions are offered with the caveat of much greater uncertainty due to the impact of the COVID-19 pandemic, although the EIA suggests a return to normal will occur by 2025 and broader, decadal trends will remain unchanged \citep{eia_annual_2021}. International forecasts show similar growth in consumption and production, but traditional sources of energy like coal and natural gas also increase in capacity to meet the needs of India, China, and other rapidly developing nations \citep{eia_international_2020}. 
+The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S.\ energy generation and consumption in the \acrlong{aeo} (\acrshort{aeo}) report. Based on the 2020 reference case, the AEO model predicts a 70\% increase in U.S.\ energy usage by 2050, driven primarily by the industrial and power sectors \citep{eia_annual_2021}. Electricity generation also grows by a third, largely due to renewables and natural gas as coal, nuclear, and oil experience reductions (Figure \ref{fig:eia_2021_projections}). These predictions are offered with the caveat of greater uncertainty in the wake of the COVID-19 pandemic, although the EIA suggests a return to normal will occur by 2025 and broader, decadal trends will remain unchanged \citep{eia_annual_2021}. International forecasts show similar growth in consumption and production, but traditional sources of energy like coal and natural gas also increase in capacity to meet the needs of India, China, and other rapidly developing nations \citep{eia_international_2020}. 
  
 \begin{figure}[htp]
 \centering
@@ -29,9 +23,9 @@ Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe
 \end{figure}
 
 \section{Upstream Commercial Pressures}\label{ch1:upstream}
-Businesses focused on exploration and production of oil \& gas face a growing list of pressures influencing future corporate strategy. On one hand, the increase in energy consumption predicted by the AEO and IEO supports a steady increase in production to meet global demand; however, geopolitical tensions, state-ownership of oil companies, and breakthrough technologies create a volatile landscape unforgiving of an unsophisticated production approach. In just the past 15 years, major downturns in oil prices were triggered by a mixture of factors: the financial crisis, tied to banking practices and housing market instability in 2008 \citep{singh_2007-2008_2021}; increased production from U.S.\ unconventional plays and supply decisions from the \acrlong{opec} (\acrshort{opec}) in 2014 \citep{lioudis_what_2021}; and a price war between Russia and Saudi Arabia coinciding with a global pandemic in 2020 \citep{blessing_what_2021}. Additional uncertainty comes from National Oil Companies (NOCs) that control the majority of the world’s petroleum reserves, production, and rights for exploration and development. NOCs operate under different business drivers than International Oil Companies (IOCs), with ramifications on the stability of IOC investments and access to reserves as seen in Russia and Venezuela  \citep{bremmer_long_2010,pirog_role_2007}. Meanwhile, disruptive technologies like precise directional drilling and efficient hydraulic fracturing have freed access to previously cost-prohibitive reserves, changing the balance of power as countries like the U.S.\ and China become less reliant on foreign hydrocarbon imports \citep{shuen_dynamic_2014}.
+Businesses focused on exploration and production of oil \& gas face a growing list of pressures influencing future corporate strategy. On one hand, the increase in energy consumption predicted by the AEO and IEO supports a steady increase in production to meet global demand; however, geopolitical tensions, state-ownership of oil companies, and breakthrough technologies create a volatile landscape unforgiving of an unsophisticated production approach. In just the past 15 years, major downturns in oil prices were triggered by a mixture of factors: the financial crisis, tied to banking practices and housing market instability in 2008 \citep{singh_2007-2008_2021}; increased production from U.S.\ unconventional plays and supply decisions from the Organization of the Petroleum Exporting Countries (OPEC) in 2014 \citep{lioudis_what_2021}; and a price war between Russia and Saudi Arabia coinciding with a global pandemic in 2020 \citep{blessing_what_2021}. Additional uncertainty comes from National Oil Companies (NOCs) that control the majority of the world’s petroleum reserves, production, and rights for exploration and development. NOCs operate under different business drivers than International Oil Companies (IOCs), with ramifications on the stability of IOC investments and access to reserves as seen in Russia and Venezuela  \citep{bremmer_long_2010,pirog_role_2007}. Meanwhile, disruptive technologies like precise directional drilling and efficient hydraulic fracturing have freed access to previously cost-prohibitive reserves, changing the balance of power as countries like the U.S.\ and China become less reliant on foreign hydrocarbon imports \citep{shuen_dynamic_2014}.
 
-Layered on top of these macroeconomic influences are unexpected events that have enormous impact on energy production and distribution operations. The 2020 outbreak of COVID-19 acted as an accelerator on longer-term trends of digital transformation and decarbonization in the oil \& gas industry. In the wake of a 25\% decrease in global demand, companies responded with massive layoffs and restructuring, a heightened focus on digitalization, and portfolio rationalizations that include shale write-downs and asset divestments \citep{deloitte_2021_2020}. Extreme weather events are shining a critical spotlight on how energy is managed now and in the future. Blackouts, water outages, and surge pricing on electricity impacted millions of Texans in February 2021 when a winter storm brought record cold temperatures, exposing systematic weaknesses in energy infrastructure and generator preparedness for low-probability but feasible working conditions \citep{harc_winter_2021,lazard_lazards_2020}. And additional threats loom in the cyberworld as malicious hacking activities have rippling social and financial implications. One such attack on Colonial Pipeline, which handles almost 50\% of the liquid fuels supplied to the U.S.\ East Coast, led to gasoline shortages, price spikes, chemical factory shut-downs, and worldwide news coverage until the nearly \$5 million in ransom was paid in May 2021 \citep{sanger_pipeline_2021}.
+Layered on top of these macroeconomic influences are unexpected events that have enormous impact on energy production and distribution operations. The 2020 outbreak of COVID-19 acted as an accelerator on longer-term trends of digital transformation and decarbonization in the oil \& gas industry. In the wake of a 25\% decrease in global demand, companies responded with massive layoffs and restructuring, a heightened focus on digitalization, and portfolio rationalizations that include shale write-downs and asset divestments \citep{deloitte_2021_2020}. Also, extreme weather events are shining a critical spotlight on how energy is managed now and in the future. Blackouts, water outages, and surge pricing on electricity impacted millions of Texans in February 2021 when a winter storm brought record cold temperatures, exposing systematic weaknesses in energy infrastructure and generator preparedness for low-probability but feasible working conditions \citep{harc_winter_2021,lazard_lazards_2020}. And additional threats loom in the cyberworld as malicious hacking activities have rippling social and financial implications. One such attack on Colonial Pipeline, which handles almost 50\% of the liquid fuels supplied to the U.S.\ East Coast, led to gasoline shortages, price spikes, chemical factory shut-downs, and worldwide news coverage until the nearly \$5 million in ransom was paid in May 2021 \citep{sanger_pipeline_2021}.
 
 \section{Net Zero Ambitions}\label{ch1:netzero}
 The 2015 Paris climate agreement set a target of $<2^\circ$C on the rise in global temperatures above the pre-industrial average (i.e., the period from 1850-1900) to prevent the most extreme impacts of climate change \citep{unfccc_paris_2015}. The more commonly-ascribed $1.5^\circ$C target may be unachievable given current trajectories, and international calls to action are focusing on reducing anthropogenic carbon dioxide emissions to ``net zero'' as quickly as possible \citep{ipcc_global_2018}. Greater public awareness and alignment with these targets puts pressure on the energy industry to revise their traditional business models. Beginning in 2020, top-tier oil and gas companies started issuing press releases outlining energy transition targets for 2025, 2030, 2050, and beyond \citep{bp_international_2020,chevron_chevron_2021,conocophillips_conocophillips_2020,equinor_equinor_2020,exxonmobil_exxonmobil_2021,shell_responsible_2020,shell_shell_2021,total_total_2020,total_2020_2021}. The proposed strategies vary but generally focus on (i) reducing company stake in fossil-fuel exploration and production activities, (ii) setting a net-zero target applicable to emissions from operations, product carbon intensity, and carbon offsets, and (iii) dedicating investments in low- and no-carbon energy alternatives to replace hydrocarbons. Nevertheless, pressure to do more, faster reached a new peak in May 2021 when a court decision in The Netherlands and shareholder votes for two U.S.\ majors demanded an accelerated push toward emissions reductions and low-carbon energy options \citep{mcwilliams_investors_2021}.
@@ -84,7 +78,7 @@ This thesis follows the flow shown in Figure \ref{fig:thesis_flow} and is struct
 \end{minipage} \hfill
 \begin{minipage}[b]{0.47\textwidth}
 \includegraphics[scale=0.47]{Figure-ThesisWorkflow}
-\caption[Flow chart for thesis structure]{Flow chart of thesis structure. Chapter numbers are circled.}
+\caption[Thesis structure flow chart]{Flow chart of thesis structure. Chapter numbers are circled.}
 \label{fig:thesis_flow}
 \end{minipage}
 \begin{itemize}
