--- a/templates/main.tex
+++ b/templates/main.tex
@@ -31,10 +31,10 @@ vi,12pt,twoside,leftblank]{mitthesis}
 \usepackage{float}
 
 %% add watermark
-\usepackage{draftwatermark}
-\SetWatermarkText{DRAFT}
-\SetWatermarkScale{3}
-\SetWatermarkColor[gray]{0.9}%{0.2}
+%\usepackage{draftwatermark}
+%\SetWatermarkText{DRAFT}
+%\SetWatermarkScale{3}
+%\SetWatermarkColor[gray]{0.9}%{0.2}
 
 %% for figures
 \usepackage[utf8]{inputenc}
