--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,14 @@
 
+@techreport{nrel_2020_2020,
+	title = {2020 {Annual} {Technology} {Baseline}},
+	url = {https://atb.nrel.gov/electricity/2021/geothermal},
+	institution = {National Renewable Energy Laboratory},
+	author = {{NREL}},
+	year = {2020},
+	note = {ISSN: 20958099
+Publication Title: Annual Technology Baseline},
+}
+
 @phdthesis{pepin_new_2019,
 	title = {New {Approaches} to {Geothermal} {Resource} {Exploration} and {Characterization}},
 	school = {New Mexico Institute of Mining and Technology},
@@ -2645,16 +2655,6 @@ The conclusions presented at the end of this report are the results of a learnin
 	year = {1995},
 	note = {Publisher: Elsevier},
 	pages = {1445--1456},
-}
-
-@techreport{nrel_2020_2020,
-	title = {2020 {Annual} {Technology} {Baseline}},
-	url = {https://atb.nrel.gov/},
-	institution = {National Renewable Energy Laboratory},
-	author = {{NREL}},
-	year = {2020},
-	note = {ISSN: 20958099
-Publication Title: Annual Technology Baseline},
 }
 
 @techreport{jelacic_evaluation_2008,
