--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -4,6 +4,7 @@
 \newacronym{auc}{AUC}{Area Under the ROC Curve}
 \newacronym{bht}{BHT}{Bottom Hole Temperature}
 \newacronym{bnn}{BNN}{Bayesian Neural Network}
+\newacronym{capex}{CAPEX}{Capital Expenditures}
 \newacronym{cdf}{CDF}{Cumulative Distribution Function}
 \newacronym{cnn}{CNN}{Convolutional Neural Network}
 \newacronym{cp}{CP}{Colorado Plateau}
@@ -21,18 +22,19 @@
 \newacronym{fp}{FP}{False Positive}
 \newacronym{fpr}{FPR}{False Positive Rate}
 \newacronym{gis}{GIS}{Geographic Information System}
+\newacronym{gp}{GP}{Great Plains}
 \newacronym{gto}{GTO}{Geothermal Technologies Office}
 \newacronym{iea}{IEA}{International Energy Agency}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{kde}{KDE}{Kernel Density Estimation}
 \newacronym{kgra}{KGRA}{Known Geothermal Resource Area}
-%\newacronym{kwh}{kW$\cdot$h}{Kilowatt-Hour}
+\newacronym{kwh}{kW$\cdot$h}{Kilowatt-Hour}
 \newacronym{lanl}{LANL}{Los Alamos National Laboratory}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{lr}{LR}{Logistic Regression}
 \newacronym{ma}{Ma}{Million Years Ago}
 \newacronym{mdvf}{MDVF}{Mogollon-Datil Volcanic Field}
-%\newacronym{mwh}{MW$\cdot$h}{Megawatt-Hour}
+\newacronym{mwh}{MW$\cdot$h}{Megawatt-Hour}
 \newacronym{nan}{NaN}{Not a Number}
 \newacronym{nfegs}{NF-EGS}{Near Field EGS}
 \newacronym{ngds}{NGDS}{National Geothermal Data System}
@@ -41,9 +43,9 @@
 \newacronym{nn}{NN}{Neural Network}
 \newacronym{nm}{NM}{New Mexico}
 \newacronym{nmfk}{NMFk}{Non-negative Matrix Factorization \& k-means Clustering}
-\newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
-\newacronym{ovo}{OvO}{One versus One}
-\newacronym{ovr}{OvR}{One versus Rest}
+\newacronym{opex}{OPEX}{Operating Expenses}
+\newacronym{ovo}{OvO}{One-versus-One}
+\newacronym{ovr}{OvR}{One-versus-Rest}
 \newacronym{pca}{PCA}{Principle Component Analysis}
 \newacronym{pdf}{PDF}{Probability Density Function}
 \newacronym{pfa}{PFA}{Play Fairway Analysis}
