--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -28,7 +28,7 @@ Businesses focused on exploration and production of oil \& gas face a growing li
 Layered on top of these macroeconomic influences are unexpected events that have enormous impact on energy production and distribution operations. The 2020 outbreak of COVID-19 acted as an accelerator on longer-term trends of digital transformation and decarbonization in the oil \& gas industry. In the wake of a 25\% decrease in global demand, companies responded with massive layoffs and restructuring, a heightened focus on digitalization, and portfolio rationalizations that include shale write-downs and asset divestments \citep{deloitte_2021_2020}. Also, extreme weather events are shining a critical spotlight on how energy is managed now and in the future. Blackouts, water outages, and surge pricing on electricity impacted millions of Texans in February 2021 when a winter storm brought record cold temperatures, exposing systematic weaknesses in energy infrastructure and generator preparedness for low-probability but feasible working conditions \citep{harc_winter_2021,lazard_lazards_2020}. And additional threats loom in the cyberworld as malicious hacking activities have rippling social and financial implications. One such attack on Colonial Pipeline, which handles almost 50\% of the liquid fuels supplied to the U.S.\ East Coast, led to gasoline shortages, price spikes, chemical factory shut-downs, and worldwide news coverage until the nearly \$5 million in ransom was paid in May 2021 \citep{sanger_pipeline_2021}.
 
 \section{Net Zero Ambitions}\label{ch1:netzero}
-The 2015 Paris climate agreement set a target of $<2^\circ$C on the rise in global temperatures above the pre-industrial average (i.e., the period from 1850-1900) to prevent the most extreme impacts of climate change \citep{unfccc_paris_2015}. The more commonly-ascribed $1.5^\circ$C target may be unachievable given current trajectories, and international calls to action are focusing on reducing anthropogenic carbon dioxide emissions to ``net zero'' as quickly as possible \citep{ipcc_global_2018}. Greater public awareness and alignment with these targets puts pressure on the energy industry to revise their traditional business models. Beginning in 2020, top-tier oil and gas companies started issuing press releases outlining energy transition targets for 2025, 2030, 2050, and beyond \citep{bp_international_2020,chevron_chevron_2021,conocophillips_conocophillips_2020,equinor_equinor_2020,exxonmobil_exxonmobil_2021,shell_responsible_2020,shell_shell_2021,total_total_2020,total_2020_2021}. The proposed strategies vary but generally focus on (i) reducing company stake in fossil-fuel exploration and production activities, (ii) setting a net-zero target applicable to emissions from operations, product carbon intensity, and carbon offsets, and (iii) dedicating investments in low- and no-carbon energy alternatives to replace hydrocarbons. Nevertheless, pressure to do more, faster reached a new peak in May 2021 when a court decision in The Netherlands and shareholder votes for two U.S.\ majors demanded an accelerated push toward emissions reductions and low-carbon energy options \citep{mcwilliams_investors_2021}.
+The 2015 Paris climate agreement set a target of $<2^\circ$C on the rise in global temperatures above the pre-industrial average (i.e., the period from 1850-1900) to prevent the most extreme impacts of climate change \citep{unfccc_paris_2015}. The more commonly-ascribed $1.5^\circ$C target may be unachievable given current trajectories, and international calls to action are focusing on reducing anthropogenic carbon dioxide emissions to ``net zero'' as quickly as possible \citep{ipcc_global_2018}. Greater public awareness and alignment with these targets puts pressure on the energy industry to revise their traditional business models. Beginning in 2020, top-tier oil and gas companies started issuing press releases outlining energy transition targets for 2025, 2030, 2050, and beyond \citep{bp_international_2020,chevron_chevron_2021,conocophillips_conocophillips_2020,equinor_equinor_2020,exxonmobil_exxonmobil_2021,shell_responsible_2020,shell_shell_2021,total_total_2020,total_2020_2021}. The proposed strategies vary but generally focus on (i) reducing company stake in fossil-fuel exploration and production activities, (ii) setting a net zero target applicable to emissions from operations, product carbon intensity, and carbon offsets, and (iii) dedicating investments in low- and no-carbon energy alternatives to replace hydrocarbons. Nevertheless, pressure to do more, faster reached a new peak in May 2021 when a court decision in The Netherlands and shareholder votes for two U.S.\ majors demanded an accelerated push toward emissions reductions and low-carbon energy options \citep{mcwilliams_investors_2021}.
 
 \section{Geothermal Energy}\label{ch1:geothermal}
 Several factors must be met for an energy source to be considered a viable and sustainable alternative to the carbon-based fuels (coal, natural gas, oil) that currently meet much of the world’s energy needs. \citeauthor{glassley_geothermal_2015} outlines a succinct set of criteria for such an energy resource: i) self-replenishment, ii) adequate abundance to meet energy demands, iii) low- to no-greenhouse gas emissions, and iv) cost competitiveness compared to accessible alternatives (\citeyear[p.\ 7]{glassley_geothermal_2015}). The first criterion precisely characterizes renewable sources of energy like solar, gravitational, and geothermal. Solar energy includes both direct (sunlight) and indirect (wind, waves, water cycle) resources \citep{hohmeyer_ipcc_2008}. Gravitational energy drives the tides and supports energy-storage solutions like pumped-storage hydropower \citep{eere_pumped-storage_2021,hohmeyer_ipcc_2008}. And geothermal energy is primarily derived from the natural decay of radioactive isotopes within the Earth \citep{hohmeyer_ipcc_2008}. Table \ref{tab:renewableflux} specifically addresses criterion ii; the annual abundances of most renewable sources exceed energy demand, with geothermal scaling several orders of magnitude greater in annual flux/demand than other options \citep{hohmeyer_ipcc_2008}. Geothermal also meets the third criterion by providing a no-carbon source of energy that could support net zero aspirations when used in place of fossil fuels. The fourth criterion is less clear-cut. Geothermal costs depend strictly on use case, but as noted in Section \ref{ch1:trends}, LCOE analysis currently ranks geothermal below wind and solar in the list of renewable options \citep{lazard_lazards_2020}. Does this make geothermal non-viable as an alternative? Perhaps no, as geothermal comes with several unique opportunities and benefits.
@@ -53,7 +53,7 @@ Most fundamentally, geothermal energy offers a reliable, nearly inexhaustible re
 
 For all its benefits, the use of geothermal energy comes with a set of challenges that are unique among renewable energy options. Many mirror issues faced by oil \& gas producers, like failures in drilling equipment or borehole integrity. Others include risk of low resource quality, poor reservoir productivity, unexpected structural and stratigraphic complexity, and undesirable fluid chemistry \citep{beckers_low-temperature_2016, hadi_resource_2010}. The similarities extend into unconventionals/EGS, where hydrofracturing risks comprise inadequate permeable rock volume within the stimulated fracture zone, short-circuiting of fluid flow between injection and productions wells, fluid losses within the subsurface, and induced seismic activity \citep{jelacic_evaluation_2008,pan_establishment_2019}. As in oil \& gas projects, some of these risks can be mitigated through appropriate subsurface characterization, others from high-resolution reservoir and fracture modeling. Collectively, the overlap in operational challenges and the skill sets required to tackle them defines a unique compatibility between oil \& gas and geothermal. Knowledge transfer between the two domains could directly benefit geothermal operations and risk-mitigation strategies \citep{petty_synergies_2009}. And investing in geothermal assets could take upstream companies a step closer to meeting net zero commitments while retaining and utilizing existing talent.
 
-One of the most significant uncertainties for geothermal is cost. The scope of an LCOE assessment considers all costs in a geothermal project, from early exploration, through development drilling and power plant construction, to operations and maintenance over a 25- to 30-year lifetime \citep{beckers_introducing_2013, entingh_volume_2006, tester_economic_1990}. Studies show drilling of exploration, appraisal, injection, and production wells can account for 60-75\% of the total EGS project expenses \citep{lukawski_uncertainty_2016, petty_synergies_2009}. New technologies being developed may help address future drilling costs \citep{nrel_2020_2020,lowry_geovision_2017}. However, substantial project savings could also be achieved through better characterization prior to drilling the first exploration well; increasing the probability of well success without multi-million dollar well failures would certainly reduce LCOE. In addition, choices in the design of the geothermal power plant may also have significant cost implications over the life of a geothermal field. Lessons can be learned from power plants built to design specifications incompatible with actual production conditions \citep[e.g.,][]{manente_hybrid_2011}. Improving the economics of geothermal start with recognizing uncertainties in the system and using those uncertainties to make better decisions on \textit{where to drill} and \textit{how to produce}. Providing the appropriate tools and methods to make these decisions could also help oil \& gas companies manage the risk of embracing lower-carbon energy production with geothermal as part of their energy mix.
+One of the most significant uncertainties for geothermal is cost. The scope of an LCOE assessment considers all costs in a geothermal project, from early exploration, through development drilling and power plant construction, to operations and maintenance over a 25- to 30-year lifetime \citep{beckers_introducing_2013, entingh_volume_2006, tester_economic_1990}. Studies show drilling of exploration, appraisal, injection, and production wells can account for 60-75\% of the total EGS project expenses \citep{lukawski_uncertainty_2016, petty_synergies_2009}. New technologies being developed may help address future drilling costs \citep{lowry_geovision_2017,nrel_2020_2020}. However, substantial project savings could also be achieved through better characterization prior to drilling the first exploration well; increasing the probability of well success without multi-million dollar well failures would certainly reduce LCOE. In addition, choices in the design of the geothermal power plant may also have significant cost implications over the life of a geothermal field. Lessons can be learned from power plants built to design specifications incompatible with actual production conditions \citep[e.g.,][]{manente_hybrid_2011}. Improving the economics of geothermal start with recognizing uncertainties in the system and using those uncertainties to make better decisions on \textit{where to drill} and \textit{how to produce}. Providing the appropriate tools and methods to make these decisions could also help oil \& gas companies manage the risk of embracing lower-carbon energy production with geothermal as part of their energy mix.
 
 \section{Research Questions}\label{ch1:researchqs}
 Based on the above-mentioned opportunity to define methods that incorporate uncertainty characterization for risk management in geothermal exploration and production, this thesis will address the following research questions:
