--- a/templates/cover.tex
+++ b/templates/cover.tex
@@ -146,7 +146,7 @@ Thanks also to the MIT Energy Initiative for welcoming me among your ranks. Than
 
 The Earth Resources Lab was one of my first connections to MIT thanks to their brief visit to Houston in early Spring 2020 (pre-Covid). Thanks go to Laurent Demanet, Director of ERL, for responding to my trial balloon emails and connecting me with both Aim\'e Fournier and Mike Fehler. Mike in turn connected me with Steve Brown, Bill Rodi, Sven Treitel, Connor Smith, and the rest of the Great Basin Machine Learning project team under Jim Faulds. I feel honored to have met and conversed with so many brilliant people whom I now consider friends. Perhaps unsurprisingly, our group conversations were a strong influence on the machine learning investigation in this thesis.
 
-I wish also to thank my company sponsor, Chevron, for taking a chance on me. I specifically want to thank those who believed in my potential and supported my year-long absence to pursue this degree: Sebastien Bombarde, John Moore, and Janet Yun for being my champions; Mason Edwards, Kenn Ehman, Kellen Gunderson, Ash Harris, Fabien Laugier, Rhonda Welch, and Khryste Wright for keeping up with me during the year away; Brendan Horton for being my Digital Scholar mentor, and so many others in the greater Chevron community. On the program side, special thanks go to Shana Bolen and Margery Connor for a year of conversations, encouragement, and a lot of behind-the-scenes efforts that I may not have been fully aware of but certainly appreciate very much.
+I wish also to thank my company sponsor, Chevron, for taking a chance on me. I specifically want to thank those who believed in my potential and supported my year-long absence to pursue this degree: Sebastien Bombarde, John Moore, and Janet Yun for being my champions; Mason Edwards, Kenn Ehman, Kellen Gunderson, Ash Harris, Fabien Laugier, Rhonda Welch, and Khryste Wright for keeping up with me during the year away; Brendan Horton for being my Digital Scholar mentor; and so many others in the greater Chevron community. On the program side, special thanks go to Shana Bolen and Margery Connor for a year of conversations, encouragement, and a lot of behind-the-scenes efforts that I may not have been fully aware of but certainly appreciate very much.
 
 Being a graduate student at MIT would be daunting in a normal year, but with a pandemic raging and real-life connections to faculty, staff, and fellow students reduced to a laptop screen and webcam, I have the 15 other Chevron scholars to thank for making the year a truly positive and life-changing experience. I feel so honored to have met such a diverse and wonderful group, and I look forward to many years of friendship and collaboration to come: Robert Andrais, Louis Catalan, Gloria Bahl Chambi, Christian Dowell, Matthew Hernandez, Matthew Kieke, Hemant Kumar, Alessandro Lucioli, Elias Machado, Monthep Parimontonsakul, Allison Polly, Kelsey Prestidge, Bagdat Toleubay, John Ward, and my thesis buddy, Surge Yemets.
 
